...
                    textInputAction: TextInputAction.next,
                    minLines: 1,
                    maxLines: 2,
                    inputFormatters: [TitleLineFormatter()],
                    decoration: const InputDecoration(
                      label: Text(
                        'Title',
                        semanticsLabel: 'Checklist item title',
                      ),
                    ),
                    onSubmitted: (_) => _notesFocus.requestFocus(),
                  ),
                ),
...
